@@ -11,6 +11,7 @@ Fixed
 Changed
     Used buttons instead of dropdown to change instance state
     Slight improvement to create container UX
+    HostsCollection implmenets JsonSerializable so it can be logged properly
 
 0.9.3
 
